# gokurai

./: CMakeLists.txt  LICENSE.txt  README.md  hello.gokurai
src/gokurai/: gokurai.cpp  gokurai.hpp  gokurai_cli.cpp
src/ix/: README.md  ix.hpp  ix_Array.cpp  ix_Array.hpp  ix_Buffer.cpp  ix_Buffer.hpp  ix_Clock.cpp  ix_Clock.hpp  ix_CmdArgsEater.cpp  ix_CmdArgsEater.hpp  ix_DumbInt.cpp  ix_DumbInt.hpp  ix_DumbString.cpp  ix_DumbString.hpp  ix_Function.cpp  ix_Function.hpp  ix_HashMapSingleArray.cpp  ix_HashMapSingleArray.hpp  ix_HashSet.cpp  ix_HashSet.hpp  ix_HollowValue.cpp  ix_HollowValue.hpp  ix_Logger.cpp  ix_Logger.hpp  ix_Mutex.cpp  ix_Mutex.hpp  ix_Pair.hpp  ix_Result.hpp  ix_Span.cpp  ix_Span.hpp  ix_StringArena.cpp  ix_StringArena.hpp  ix_StringView.cpp  ix_StringView.hpp  ix_SystemManager.cpp  ix_SystemManager.hpp  ix_TempFile.cpp  ix_TempFile.hpp  ix_Thread.cpp  ix_Thread.hpp  (+49 more)
